[feat] add update weight api
