# internal/router/equip.go
@@ -10,4 +10,5 @@ func RegisterEquip(r *gin.RouterGroup) {
 	equipGroup := r.Group("/equip").Use(auth.ValidateToken)
 
 	equipGroup.POST("/", equipAction.CreateEquip)
+	equipGroup.PUT("/:id/weight", equipAction.UpdateWeight)
 }
